--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mdb-react-ui-kit": "^5.0.0",
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.5",
     "react": "^18.2.0",
